# pyrsedis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  test.sh  test_images.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  architecture.md  benchmarks.md  changelog.md  index.md  why-pyrsedis.md
docs/advanced/: errors.md  performance.md  pipelines.md  pooling.md  security.md  urls.md
docs/commands/: hashes.md  keys.md  lists.md  scripting.md  server.md  sets.md  sorted-sets.md  strings.md
docs/falkordb/: management.md  queries.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
python/pyrsedis/: __init__.py  _pyrsedis.pyi
scripts/: fix_exec_raw.py  migrate_single_pass.py  test-matrix.sh
src/: client.rs  config.rs  crc16.rs  error.rs  graph.rs  lib.rs  response.rs  runtime.rs
src/connection/: mod.rs  pool.rs  tcp.rs
src/resp/: mod.rs  parser.rs  types.rs  writer.rs
src/router/: cluster.rs  mod.rs  sentinel.rs  standalone.rs
tests/: test_graph.rs  test_hashes.rs  test_lists.rs  test_perf.rs  test_pipeline.rs  test_pool.rs  test_server.rs  test_sets.rs  test_sorted_sets.rs  test_strings.rs
tests/common/: mod.rs
tests/python/: test_benchmark.py  test_integration.py
